# flash_ipa

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/flash_ipa/: edge_embedder.py  factorizer.py  ipa.py  model.py  utils.py
